artifacthub/library/pod-security-policy/apparmor/1.1.1/samples/psp-apparmor/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-apparmor-disallowed
  annotations:
    # apparmor.security.beta.kubernetes.io/pod: unconfined # runtime/default
    container.apparmor.security.beta.kubernetes.io/nginx: unconfined
  labels:
    app: nginx-apparmor
spec:
  ephemeralContainers:
  - name: nginx
    image: nginx
