artifacthub/library/pod-security-policy/apparmor/1.1.1/samples/psp-apparmor/example_disallowed_no_profile.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-apparmor-disallowed
  labels:
    app: nginx-apparmor
spec:
  securityContext:
    appArmorProfile:
      type: "Unconfined"
  containers:
  - name: nginx
    image: nginx
