artifacthub/library/pod-security-policy/apparmor/1.1.1/samples/psp-apparmor/example_disallowed_override.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-apparmor-allowed
  labels:
    app: nginx-apparmor
spec:
  securityContext:
    appArmorProfile:
      type: "RuntimeDefault"
  containers:
  - name: nginx
    image: nginx
    securityContext:
      appArmorProfile:
        type: "Unconfined"
